modified:   2_Advanced/18_skill_pay_analysis.ipynb 	new file:   3_Project/3_Skill_Trend.ipynb 	new file:   3_Project/4_Salary_Analysis.ipynb 	new file:   3_Project/5_Optimal_Skill.ipynb 	new file:   3_Project/Images/optimal_skill.png 	new file:   3_Project/Images/salary_data_jobs.png 	new file:   3_Project/Images/skill_salary_analysis.png 	new file:   3_Project/Images/skill_trend.png 	modified:   README.md

--- a/2_Advanced/18_skill_pay_analysis.ipynb
+++ b/2_Advanced/18_skill_pay_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "253f20cb",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1c2f0760",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "31ad906f",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4248cf3d",
    "metadata": {},
    "outputs": [],
@@ -260,17 +260,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6e99f3e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>job_skills</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>airflow</th>\n",
+       "      <td>44</td>\n",
+       "      <td>116250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>airtable</th>\n",
+       "      <td>5</td>\n",
+       "      <td>90000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alteryx</th>\n",
+       "      <td>106</td>\n",
+       "      <td>106281.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>angular</th>\n",
+       "      <td>8</td>\n",
+       "      <td>107500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ansible</th>\n",
+       "      <td>1</td>\n",
+       "      <td>159640.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wire</th>\n",
+       "      <td>4</td>\n",
+       "      <td>74250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>word</th>\n",
+       "      <td>461</td>\n",
+       "      <td>81194.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>workfront</th>\n",
+       "      <td>3</td>\n",
+       "      <td>75000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wrike</th>\n",
+       "      <td>1</td>\n",
+       "      <td>75000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zoom</th>\n",
+       "      <td>15</td>\n",
+       "      <td>80740.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>170 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            count     median\n",
+       "job_skills                  \n",
+       "airflow        44  116250.00\n",
+       "airtable        5   90000.00\n",
+       "alteryx       106  106281.25\n",
+       "angular         8  107500.00\n",
+       "ansible         1  159640.00\n",
+       "...           ...        ...\n",
+       "wire            4   74250.00\n",
+       "word          461   81194.75\n",
+       "workfront       3   75000.00\n",
+       "wrike           1   75000.00\n",
+       "zoom           15   80740.00\n",
+       "\n",
+       "[170 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_DA_group = df_DA_US.groupby('job_skills')['salary_year_avg'].agg(['count', 'median'])"
+    "df_DA_group = df_DA_US.groupby('job_skills')['salary_year_avg'].agg(['count', 'median'])\n",
+    "df_DA_group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "e877be40",
    "metadata": {},
    "outputs": [],
@@ -281,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "4906ca73",
    "metadata": {},
    "outputs": [
